src/main/metadata-excluded/objects/Survey_Result__c.object
<CustomObject>
    <description>SSI: To record SSI survey result</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to relate Welcom Call Survey and Customer, make sure a customer just exists one Welcome Call Survey Result.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Results</relationshipLabel>
        <relationshipName>Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>B1_Question__c</fullName>
        <label>B1 Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B1__c</fullName>
        <description>Migration</description>
        <label>B1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2_Question__c</fullName>
        <label>B2 Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2__c</fullName>
        <label>B2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B3_Question__c</fullName>
        <label>B3 Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B3__c</fullName>
        <label>B3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAC_SourceId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External id field for migration purpose</description>
        <externalId>true</externalId>
        <label>CAC SourceId</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <description>公司名称</description>
        <label>CompanyName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <description>客户名称</description>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Service__c</fullName>
        <formula>MBDA_Order__r.EffectiveDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MBDA Date of Last Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DealerName__c</fullName>
        <description>经销商名称</description>
        <label>DealerName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <description>DMS代码</description>
        <label>Dealer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endcalltime__c</fullName>
        <description>结束时间（挂断电话的时间）</description>
        <label>End call time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Eventuallycontactphone__c</fullName>
        <description>最终联系人电话</description>
        <label>Eventually contact phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <formula>TEXT(Account__r.Gender__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceDate__c</fullName>
        <description>购车日期</description>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InvoiceMonth__c</fullName>
        <description>购车月</description>
        <label>Invoice Month (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Month__c</fullName>
        <label>Invoice Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBDA_Car_Accessory__c</fullName>
        <label>MBDA Car Accessory</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MBDA_Car__c</fullName>
        <label>MBDA Car Performance</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MBDA_Course_Bought__c</fullName>
        <formula>TEXT(MBDA_Order__r.MBDA_Vehicle_Model__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MBDA Course Bought</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBDA_Course_Problem__c</fullName>
        <label>MBDA Course Problem</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MBDA_Course_Score__c</fullName>
        <label>MBDA Course Score</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MBDA_Experience_Score__c</fullName>
        <label>MBDA Experience Score</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MBDA_How_to_Know__c</fullName>
        <label>MBDA How to Know</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MBDA_Instructor_On_Time__c</fullName>
        <label>MBDA Instructor On Time</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MBDA_Instructor_Service_Score__c</fullName>
        <label>MBDA Instructor Service Score</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MBDA_Instructor__c</fullName>
        <label>MBDA Instructor Appearance</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MBDA_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MBDA Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Survey Results</relationshipLabel>
        <relationshipName>Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MBDA_Other_Suggestion__c</fullName>
        <label>MBDA Other Suggestion</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MBDA_Payment_Method__c</fullName>
        <formula>TEXT( MBDA_Order__r.Payment_type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MBDA Payment Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBDA_Phone__c</fullName>
        <formula>Account__r.Mobile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MBDA Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBDA_Reorder__c</fullName>
        <label>MBDA Reorder</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MBDA_Result_Score__c</fullName>
        <label>MBDA Result Score</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MBDA_Service_Type__c</fullName>
        <formula>TEXT(MBDA_Order__r.Service_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MBDA Service Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBDA_Tool_Score__c</fullName>
        <label>MBDA Tool Score</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MBDA__c</fullName>
        <label>MBDA Grade CSR</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mark__c</fullName>
        <formula>SSI_Record__r.Mark__c</formula>
        <label>Mark</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>手机1</description>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NA_Number__c</fullName>
        <description>Store Number of N/A answers of 1st Survey, if value larger than 5, than will not generate QC.</description>
        <label>NA Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OB_Notes__c</fullName>
        <label>OB Notes</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <description>销售顾问</description>
        <label>Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q1001__c</fullName>
        <description>Migration</description>
        <label>Q1001</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q1002__c</fullName>
        <description>Migration</description>
        <label>Q1002</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q1003__c</fullName>
        <description>Migration</description>
        <label>Q1003</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q10041A__c</fullName>
        <description>Migration</description>
        <label>Q10041A</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q11A__c</fullName>
        <description>Migration</description>
        <label>Q11A</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q37A__c</fullName>
        <description>Migration</description>
        <label>Q37A</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q8B__c</fullName>
        <description>Migration</description>
        <label>Q8B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sharing rule Criteria, When QC Approved is true, Survey result should be share to Sinotrust user.</description>
        <label>QC Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S1_B1_Question__c</fullName>
        <label>S1 B1 Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_B2_Question__c</fullName>
        <label>S1 B2 Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_B3_Question__c</fullName>
        <label>S1 B3 Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_F1_Code__c</fullName>
        <inlineHelpText>您是否愿意将今天的访问内容反馈给经销商，以便经销商改进销售服务工作，今后更好地为您服务？</inlineHelpText>
        <label>*S1 F1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_F1_Question__c</fullName>
        <label>S1 F1 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_F1__c</fullName>
        <inlineHelpText>您是否愿意将今天的访问内容反馈给经销商，以便经销商改进销售服务工作，今后更好地为您服务？</inlineHelpText>
        <label>S1 F1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_F2_Code__c</fullName>
        <inlineHelpText>访问员记录被访者性别？</inlineHelpText>
        <label>*S1 F2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_F2_Question__c</fullName>
        <label>S1 F2 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_F2__c</fullName>
        <inlineHelpText>访问员记录被访者性别？</inlineHelpText>
        <label>S1 F2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_G1_Code__c</fullName>
        <inlineHelpText>您是否记得为您服务的销售顾问的名字？</inlineHelpText>
        <label>*S1 G1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_G1_Person__c</fullName>
        <inlineHelpText>销售顾问姓名是？</inlineHelpText>
        <label>S1 G1 Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_G1_Question__c</fullName>
        <label>S1 G1 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_G1__c</fullName>
        <inlineHelpText>您是否记得为您服务的销售顾问的名字？</inlineHelpText>
        <label>S1 G1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_G1a__c</fullName>
        <label>S1 G1a</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>S1_G2_Code__c</fullName>
        <inlineHelpText>您在购买这辆奔驰车的过程中，您对为您服务的销售顾问的总体满意程度</inlineHelpText>
        <label>*S1 G2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_G2_Question__c</fullName>
        <label>S1 G2 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_G2__c</fullName>
        <inlineHelpText>您在购买这辆奔驰车的过程中，您对为您服务的销售顾问的总体满意程度</inlineHelpText>
        <label>S1 G2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_G3_Code__c</fullName>
        <inlineHelpText>如果您的亲戚朋友购车，您向他们推荐该销售顾问的可能性有多大？</inlineHelpText>
        <label>*S1 G3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_G3_Question__c</fullName>
        <label>S1 G3 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_G3__c</fullName>
        <inlineHelpText>如果您的亲戚朋友购车，您向他们推荐该销售顾问的可能性有多大？</inlineHelpText>
        <label>S1 G3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_G4a__c</fullName>
        <label>S1 G4a</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>S1_H1_Code__c</fullName>
        <inlineHelpText>您对这家经销商所提供的接待与洽谈服务的总体满意程度</inlineHelpText>
        <label>*S1 H1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_H1_Question__c</fullName>
        <label>S1 H1 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_H1__c</fullName>
        <inlineHelpText>您对这家经销商所提供的接待与洽谈服务的总体满意程度</inlineHelpText>
        <label>S1 H1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_H2_Code__c</fullName>
        <inlineHelpText>您对这家经销商所提供的试乘试驾服务的总体满意程度</inlineHelpText>
        <label>*S1 H2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_H2_Question__c</fullName>
        <label>S1 H2 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_H2__c</fullName>
        <inlineHelpText>您对这家经销商所提供的试乘试驾服务的总体满意程度</inlineHelpText>
        <label>S1 H2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_H3_Code__c</fullName>
        <inlineHelpText>您对这家经销商所提供的付款与交车服务的总体满意程度</inlineHelpText>
        <label>*S1 H3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_H3_Question__c</fullName>
        <label>S1 H3 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_H3__c</fullName>
        <inlineHelpText>您对这家经销商所提供的付款与交车服务的总体满意程度</inlineHelpText>
        <label>S1 H3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_K1_Code__c</fullName>
        <inlineHelpText>您在购买这辆奔驰车的过程中，您对这家经销商所提供销售服务的总体满意程度</inlineHelpText>
        <label>*S1 K1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_K1_Question__c</fullName>
        <label>S1 K1 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_K1__c</fullName>
        <inlineHelpText>您在购买这辆奔驰车的过程中，您对这家经销商所提供销售服务的总体满意程度</inlineHelpText>
        <label>S1 K1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_K2_Code__c</fullName>
        <inlineHelpText>根据您在这家经销店处的购车体验，您向朋友同事推荐这家经销商的可能性有多大？</inlineHelpText>
        <label>*S1 K2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_K2_Question__c</fullName>
        <label>S1 K2 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_K2__c</fullName>
        <inlineHelpText>根据您在这家经销店处的购车体验，您向朋友同事推荐这家经销商的可能性有多大？</inlineHelpText>
        <label>S1 K2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_K3_Code__c</fullName>
        <inlineHelpText>假如您再次购买奔驰车，您还会从这家经销店处购买吗？</inlineHelpText>
        <label>*S1 K3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_K3_Question__c</fullName>
        <label>S1 K3 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_K3__c</fullName>
        <inlineHelpText>假如您再次购买奔驰车，您还会从这家经销店处购买吗？</inlineHelpText>
        <label>S1 K3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_K4a__c</fullName>
        <label>S1 K4a</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>S1_Mark__c</fullName>
        <label>S1 Mark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_Other_Contact__c</fullName>
        <inlineHelpText>请问是哪一位去奔驰经销商处看车和提车的呢？</inlineHelpText>
        <label>S1 Other Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_Phone__c</fullName>
        <inlineHelpText>请问您方便提供他的联系方式嘛？</inlineHelpText>
        <label>S1 Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_Q10_Code__c</fullName>
        <label>*S1 Q10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_Q10_Question__c</fullName>
        <label>S1 Q10 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_Q10__c</fullName>
        <label>S1 Q10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_Q10a__c</fullName>
        <label>S1 Q10a</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>S1_Q1_Code__c</fullName>
        <inlineHelpText>您来到这家经销店时，是否立刻有工作人员来接待您？</inlineHelpText>
        <label>*S1 Q1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_Q1_Question__c</fullName>
        <label>S1 Q1 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_Q1__c</fullName>
        <inlineHelpText>您来到这家经销店时，是否立刻有工作人员来接待您？</inlineHelpText>
        <label>S1 Q1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_Q201_Code__c</fullName>
        <inlineHelpText>对您的服务态度及服务周到性</inlineHelpText>
        <label>*S1 Q201</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_Q201_Question__c</fullName>
        <label>S1 Q201 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_Q201__c</fullName>
        <inlineHelpText>对您的服务态度及服务周到性</inlineHelpText>
        <label>S1 Q201</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_Q2031a__c</fullName>
        <label>S1 Q2031a</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>S1_Q2041a__c</fullName>
        <label>S1 Q2041a</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>S1_S1_Code__c</fullName>
        <inlineHelpText>请问您最近在购买奔驰车的过程中，是您亲自去奔驰经销商处看车和提车的吗？</inlineHelpText>
        <label>*S1 S1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_S1_Question__c</fullName>
        <label>S1 S1 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_S1_Try_Question__c</fullName>
        <label>S1 S1 Try Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_S1__c</fullName>
        <inlineHelpText>请问您最近在购买奔驰车的过程中，是您亲自去奔驰经销商处看车和提车的吗？</inlineHelpText>
        <label>S1 S1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_S1a__c</fullName>
        <label>S1 S1a</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>S1_S2_Code__c</fullName>
        <inlineHelpText>请问您购买的这辆奔驰车的车型是？</inlineHelpText>
        <label>*S1 S2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_S2_Question__c</fullName>
        <label>S1 S2 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_S2__c</fullName>
        <inlineHelpText>请问您购买的这辆奔驰车的车型是？</inlineHelpText>
        <label>S1 S2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_S2a__c</fullName>
        <label>S1 S2a</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>S1_S3_Code__c</fullName>
        <inlineHelpText>购买这辆奔驰车是谁决定的？</inlineHelpText>
        <label>*S1 S3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_S3_Question__c</fullName>
        <label>S1 S3 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_S3__c</fullName>
        <inlineHelpText>购买这辆奔驰车是谁决定的？</inlineHelpText>
        <label>S1 S3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_S4c__c</fullName>
        <label>S1 S4c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_S5a__c</fullName>
        <label>S1 S5a</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>S1_Start1_Question__c</fullName>
        <label>S1 Start1 Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_Start2_Question__c</fullName>
        <label>S1 Start2 Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_Try1_Question__c</fullName>
        <label>S1 Try1 Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_Try2_Question__c</fullName>
        <label>S1 Try2 Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_Try_Question__c</fullName>
        <label>S1 Try Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_Try__c</fullName>
        <label>S1 Try</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_Z1_Code__c</fullName>
        <inlineHelpText>回想您购车时的经历，您对【读出用户实际购车所在经销商】所提供销售服务的满意程度如何？</inlineHelpText>
        <label>*S1 Z1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_Z1_Question__c</fullName>
        <label>S1 Z1 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_Z1__c</fullName>
        <inlineHelpText>回想您购车时的经历，您对【读出用户实际购车所在经销商】所提供销售服务的满意程度如何？</inlineHelpText>
        <label>S1 Z1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_Z1a__c</fullName>
        <label>S1 Z1a</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>S1_Z2_Code__c</fullName>
        <inlineHelpText>对这家经销商的销售服务您有什么建议吗，以便经销商为您提供更好的销售服务？</inlineHelpText>
        <label>*S1 Z2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_Z2_Question__c</fullName>
        <label>S1 Z2 Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S1_Z2__c</fullName>
        <inlineHelpText>对这家经销商的销售服务您有什么建议吗，以便经销商为您提供更好的销售服务？</inlineHelpText>
        <label>S1 Z2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_Z2a__c</fullName>
        <label>S1 Z2a</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>S2_EndCa__c</fullName>
        <label>S2 EndCa</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>S2_EndCb__c</fullName>
        <label>S2 EndCb</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>S2_Q1b_Code__c</fullName>
        <inlineHelpText>请问该经销商是否有和您取得过联系，并给予过客户关怀？</inlineHelpText>
        <label>*S2 Q1b</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S2_Q1b_Question__c</fullName>
        <label>S2 Q1b Question</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>S2_Q1b__c</fullName>
        <inlineHelpText>请问该经销商是否有和您取得过联系，并给予过客户关怀？</inlineHelpText>
        <label>S2 Q1b</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S2_Q1ba__c</fullName>
        <label>S2 Q1ba</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SSI_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SSI Record</label>
        <referenceTo>SSI__c</referenceTo>
        <relationshipLabel>Survey Results</relationshipLabel>
        <relationshipName>Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SecondMobile__c</fullName>
        <description>手机2</description>
        <label>Second Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Start1_Question__c</fullName>
        <label>Start1 Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start1__c</fullName>
        <label>Start1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start1a__c</fullName>
        <label>Start1a</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start2_Question__c</fullName>
        <label>Start2 Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start2__c</fullName>
        <label>Start2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Startcalltime__c</fullName>
        <description>开始时间（拨打电话的时间）</description>
        <label>Start call time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Step__c</fullName>
        <label>Survey Step</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskId__c</fullName>
        <description>Related to Task.</description>
        <label>*TaskId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Successful__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by Chris Huang, 20131204.
Created for CR-000248, 131115-19</description>
        <label>Task Successful</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tel1__c</fullName>
        <description>电话1</description>
        <label>Tel1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tel2__c</fullName>
        <description>电话2</description>
        <label>Tel2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Try1_Question__c</fullName>
        <label>Try1 Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Try1__c</fullName>
        <label>Try1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Try1a__c</fullName>
        <label>Try1a</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Try2_Question__c</fullName>
        <label>Try2 Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Try2__c</fullName>
        <label>Try2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Try2a__c</fullName>
        <label>Try2a</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Uncomfortable_with_CSR__c</fullName>
        <label>MBDA Dissatisfaction of our CSR</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>